@@ -15,26 +15,32 @@ import java.util.Date;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 @Component
 public class JwtService {
 
     @Value("${jwt.secret}")
-    public String SECRET;
+    public String secret;
 
     /**
-     * Generate token with given email
-     *  TODO aggiornare javadoc
-     * @param email
-     * @return
+     * Generates a JWT token with the given user details.
+     *
+     * @param userDetails The user details containing the email and roles.
+     * @return The generated JWT token.
+     * <p>
+     * This method creates a JWT token with the following claims:
+     * - `sub`: The subject, which is the email of the user.
+     * - `roles`: The roles assigned to the user.
+     *
+     * The token is created by calling the `createToken` method with the claims and the user's email.
      */
+
     public String generateToken(UserDetails userDetails) {
         Map<String, Object> claims = new HashMap<>();
         claims.put("sub", userDetails.getUsername()); // Subject (email)
         claims.put("roles", userDetails.getAuthorities().stream()
                 .map(GrantedAuthority::getAuthority) // Extract role names
-                .collect(Collectors.toList())); // Add roles to claims
+                .toList()); // Add roles to claims
 
         return createToken(claims, userDetails.getUsername());
     }
@@ -62,7 +68,7 @@ public class JwtService {
      * @return
      */
     private Key getSignKey() {
-        byte[] keyBytes = Decoders.BASE64.decode(SECRET);
+        byte[] keyBytes = Decoders.BASE64.decode(secret);
         return Keys.hmacShaKeyFor(keyBytes);
     }
 
